gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fob1.d
version https://git-lfs.github.com/spec/v1
oid sha256:9aa8a464477b3796cf4ad5f9fcd11a8809e3d32367a576376f6ca9f1067a8a5b
size 1515
